--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,10 +49,9 @@ body {
     }
 }
 
-.box {
+/* .box {
     font-family: "Nunito", sans-serif;
     font-weight: 400;
-    flex: 50%;
     padding: 9rem;
     display: flex;
     flex-direction: column;
@@ -65,7 +64,7 @@ body {
     border-radius: 9px;
     overflow: hidden;
     display: flex;
-}
+} */
 
 .alter-height {
     padding-top: 30px;
