--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,9 +49,10 @@ body {
     }
 }
 
-/* .box {
+.box {
     font-family: "Nunito", sans-serif;
     font-weight: 400;
+    flex: 50%;
     padding: 9rem;
     display: flex;
     flex-direction: column;
@@ -64,7 +65,7 @@ body {
     border-radius: 9px;
     overflow: hidden;
     display: flex;
-} */
+}
 
 .alter-height {
     padding-top: 30px;
